<resources>
    <string name="app_name">WorkIt</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_create_job">CreateJobActivity</string>
    <string name="title_activity_job_details">JobDetailsActivity</string>
    <string name="title_activity_task_request_detail">TaskRequestDetailActivity</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="register_button">Not a member? Sign up now.</string>
    <string name="return_to_login_button">Already registred? Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>
</resources>
